@@ -1,12 +1,12 @@
 Package: expm
 Type: Package
 Title: Matrix exponential
-Version: 0.2-1
-Date: 2008-02-23
+Version: 0.9-1
+Date: 2008-02-27
 Author: Vincent Goulet, Christophe Dutang, David Firth, Marina Shapira, Martin Maechler
 Maintainer: Vincent Goulet <vincent.goulet@act.ulaval.ca>
-Description: Simple package providing an R and a C function to compute
-  the matrix exponential of a matrix.
+Description: Simple package for computation of the matrix exponential and
+ related quantities.
 Depends: R (>= 2.4.1)
 Enhances: Matrix
 License: GPL (>= 2)
